container fix on mobile

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -30,6 +30,14 @@ small{
 		.container {
 			width: 100%;
 		}
+		.row {
+			margin-right: 0;
+			margin-left: 0;
+		}	
+		.col-12 {
+	 	 	padding-right: 0;
+	  		padding-left: 0; 
+		}			
 	}
 
 	@media (min-width: 768px) {
